--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-19 10:05:59.697842",
+  "@@last_modified": "2025-11-20 10:48:44.702244",
   "about": "Sobre",
   "@about": {
     "type": "String",
@@ -10904,6 +10904,26 @@
     "placeholders": {}
   },
   "@teacherModeDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "failedToLoadFeedback": "Falha ao carregar feedback.",
+  "unreadPlus": "99+",
+  "highlightVocabTooltip": "Destaque as palavras de vocabulário-alvo abaixo enviando-as ou praticando com elas no chat",
+  "noSavedActivitiesYet": "As atividades aparecerão aqui assim que forem concluídas e salvas.",
+  "@failedToLoadFeedback": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unreadPlus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noSavedActivitiesYet": {
     "type": "String",
     "placeholders": {}
   }
